--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
