--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.12.0",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.12.0"
   }
 }
