--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@prisma/client": "^5.12.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
