--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.2",
+    "@apollo/subgraph": "^2.7.2",
     "@prisma/client": "^5.12.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -18,6 +20,8 @@
     "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
