--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx prisma generate && tsc --b && node dist/index.js",
-    "compile": "tsc --b"
+    "dev": "npx prisma generate && tsc --b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,12 +25,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
+    "typescript": "^5.4.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "prisma": "^5.12.0",
-    "typescript": "^5.4.5"
-  },
-  "type": "module"
+    "prisma": "^5.12.0"
+  }
 }
