--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
+    "csv-stringify": "^6.4.6",
+    "csv-writer": "^1.6.0",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
