--- a/package.json
+++ b/package.json
@@ -11,26 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.10.2",
-    "@apollo/subgraph": "^2.7.2",
-    "@prisma/client": "^5.12.0",
+    "@prisma/client": "^5.12.1",
+    "@types/adm-zip": "^0.5.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.11",
+    "adm-zip": "^0.5.12",
+    "archiver": "^7.0.1",
     "cors": "^2.8.5",
     "csv-stringify": "^6.4.6",
     "csv-writer": "^1.6.0",
     "express": "^4.19.2",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
+    "write-excel-file": "^1.4.30",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "prisma": "^5.12.0"
+    "prisma": "^5.12.1"
   }
 }
