--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "adm-zip": "^0.5.12",
     "archiver": "^7.0.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-stringify": "^6.4.6",
     "csv-writer": "^1.6.0",
