--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "csv-stringify": "^6.4.6",
     "csv-writer": "^1.6.0",
+    "exiftool-vendored": "^26.0.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2",
@@ -30,6 +31,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "prisma": "^5.12.1"
   }
 }
