--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx prisma generate && npx prisma migrate deploy && tsc --b && cp ./src/v1/routes/file/main.py ./dist/v1/routes/file/main.py && node dist/index.js",
-    "build-and-run": "npx prisma generate && npx prisma migrate deploy && tsc --build && copy .\\src\\v1\\routes\\file\\main.py .\\dist\\v1\\routes\\file\\main.py && node dist\\index.js"
+    "build-and-run": "npx prisma generate && npx prisma migrate deploy && npx tsc --build && copy .\\src\\v1\\routes\\file\\main.py .\\dist\\v1\\routes\\file\\main.py && copy .\\src\\v1\\routes\\archiveGenerator\\archiver.py .\\dist\\v1\\routes\\archiveGenerator\\archiver.py && node dist\\index.js",
+    "start": "node dist\\index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.15.0",
     "@types/adm-zip": "^0.5.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -26,6 +27,7 @@
     "exiftool-vendored": "^26.0.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "write-excel-file": "^1.4.30",
@@ -33,6 +35,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "prisma": "^5.12.1"
+    "prisma": "^5.15.0"
   }
 }
